<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_implicit_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/call_user_directly"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_implicit_dial"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_user_via_dialpad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_implicit_call"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_implicit_browser"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_google_web_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_implicit_dial"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/go_to_home_page"
        app:layout_constraintTop_toBottomOf="@+id/btn_implicit_browser"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_activity_lifecycle"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/go_to_activity_lifecycle"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"/>

</androidx.constraintlayout.widget.ConstraintLayout>